<resources>
    <string name="app_name">Bow Wow</string>
    <string name="reset_button">Reset</string>
    <string name="calculate_button">Calculate</string>
    <string name="order_button">Order</string>
    <string name="trim_nails">Trim Nails</string>
    <string name="flea_bath">Flea Bath</string>
    <string name="massage">Massage</string>
    <string name="amount_default">$0.00</string>
    <string name="weight_hint">Enter a weight (lbs)</string>
    <string name="title_textView">Bow Wow\nDog Groomers</string>
</resources>